fix overflow issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,7 +27,7 @@
 
 .navmenu-btn {
    display: none;
-   margin: 16px 24px 0px 0px;
+   margin: 16px 16px 0px 0px;
 }
 
 /* three lines of hamburger menu */
