--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&family=Poppins:wght@400;500;800&display=swap');
 
+* {
+   box-sizing: border-box;
+}
 
 /* removing default body margin */
 body {
@@ -7,7 +10,6 @@ body {
    background: rgb(0, 0, 0);
    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 10%, rgba(0, 21, 72, 1) 30%,
          rgba(0, 34, 88, 1) 40%, rgba(0, 47, 104, 1) 50%, rgba(6, 61, 120, 1) 70%);
-   box-sizing: border-box;
 }
 
 .glassmorphism {
